# CPA_PROJ_2

./: .gitignore  CMakeLists.txt  README.md
data/: best_results.csv  best_results.xlsx  best_times.csv  best_times.csv.xlsx  best_times2.csv  idk.ipynb  results.csv  results.txt  results2.txt
src/: helpers.cpp  helpers.h  main copy.cpp  main.cpp
